--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.26.0",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.8.1",
