--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.1.5"
+    "reselect": "^4.1.5",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
