--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-infinite-scroller": "^1.2.5",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
