--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
+    "lodash.debounce": "^4.0.8",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-infinite-scroller": "^1.2.5",
